--- a/css/jz.css
+++ b/css/jz.css
@@ -55,3 +55,12 @@
 	font-size: 13px;
 	float: right;
 }
+.weui-form-preview__item > span{
+	color: black;
+	float: left;
+}
+.info-desc{
+	float: left;
+	line-height:1.5;
+	text-align:left;
+}
