可以出现筛选界面了
可以出现筛选界面了

--- a/css/jz.css
+++ b/css/jz.css
@@ -64,3 +64,17 @@
 	line-height:1.5;
 	text-align:left;
 }
+.checkDiv{
+	padding-left: 5%;
+}
+.checkBtn{
+	color: #0f0f0f;
+	margin-top: 0 !important; 
+}
+.checkBtnActive{
+	background-color: #83FCD8;
+}
+.commitBtn{
+	background-color: #1AAd19;
+	margin-bottom: 5%;
+}
